network-policy/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: networkpol-block81
  namespace: vivekname
spec:
  podSelector:
    matchLabels:
      app: nginxapp
  ingress: 
  - from:
    - ipBlock:
        cidr: 10.244.0.131/16
    ports:
    - port: 80
